--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         </div>
         <div id="final">
             <div class="socialmedia">
-                <div><a href="https://www.instagram.com/prof.vanessacruvinel/?hl=pt-br"><img src="images/instagram_logo.png" alt="instagram_logo"><h2>Instagram</h2></a></div>
-                <div><a href="https://api.whatsapp.com/send?phone=5534991085519"><img src="images/whatsapp_logo.png" alt="whatsapp_logo"><h2>WhatsApp</h2></a></div>
-                <div><a href=""><img src="images/e-mail_logo.png" alt="e-mail_logo"><h2>e-mail</h2></a></div>
+                <div><a href="https://www.instagram.com/prof.vanessacruvinel/?hl=pt-br" target="_blank"><img src="images/instagram_logo.png" alt="instagram_logo"><h2>Instagram</h2></a></div>
+                <div><a href="https://api.whatsapp.com/send?phone=5534991085119" target="_blank"><img src="images/whatsapp_logo.png" alt="whatsapp_logo"><h2>WhatsApp</h2></a></div>
+                <div><a href="" target="_blank"><img src="images/e-mail_logo.png" alt="e-mail_logo"><h2>e-mail</h2></a></div>
             </div> 
             <div class="imagem"><a href="index.html"><img src="images/conceito_logo.png" alt="conceito_logo"></a></div>
             <div class="direitos"><h3>Todos os direitos reservados &copy;&reg;</h3></div> 
