--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <title>Conceito|Laboratório de escrita</title>
         <meta charset="UTF-8">
+        <link rel="icon" href="images/icone.png">
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="page-landing.css">
+        <link rel="stylesheet" href="styles/headers.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
     </head>
