abaixando a resolução da imagem

--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
         </header>
         <div id="redes-sociais">
             <div><a href=""><img src="images/instagram_logo.png" alt="logoinstagram"><h2>Instagram</h2></a></div>
-            <img src="/images/vanessa_instagram.png" alt="instagram" id ="preview">
+            <img src="/images/vanessa_instagram.jpg" alt="instagram" id ="preview">
             <div><a href=""><img src="images/whatsapp_logo.png" alt="logowhatsapp"><h2>WhatsApp</h2></a></div>
             
         </div>
